gamelist, create-game section jump fix after click 'Create Game'

--- a/public/styles/gamelist.css
+++ b/public/styles/gamelist.css
@@ -444,7 +444,7 @@
     pointer-events: none;
 }
 #startGameSection.createGameActive .gamelist-container {
-    justify-content: end;
+    justify-content: start;
     gap: 0;
 }
 #startGameSection.createGameActive .game-list-container {
